feat: crud products
